--- a/src/style.css
+++ b/src/style.css
@@ -1,35 +1,43 @@
 body {
-  background-color: rgb(219, 216, 216);
+  background-color: rgb(221, 231, 232);
+  background-image: url("Brooke-kitchen.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-left: 30%;
+  padding-top: 5%;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 .container {
-  margin: 120px auto;
+  margin: auto;
   max-width: 600px;
 }
 h1 {
   text-align: center;
-  font-size: 36px;
+  font-size: 30px;
   line-height: 1.5;
-  color: dark gray;
+  color: rgb(240, 77, 115);
 }
-
+h2 {
+  font-size: 20px;
+}
 header {
   margin-bottom: 30px;
 }
 
 .form-container {
-  background-color: rgb(239, 235, 235);
+  background-color: rgb(198, 212, 219);
   margin-bottom: 30px;
-  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  box-shadow: 0px 20px 60px rgba(204, 217, 223);
   border-radius: 10px;
-  padding: 15px 20px;
+  padding: 20px;
 }
 
 .hint {
   line-height: 1.5;
   font-size: 12px;
-  margin-top: 5px;
+  margin-top: 10px;
   opacity: 0.6;
 }
 form {
@@ -37,23 +45,23 @@ form {
 }
 
 a {
-  color: rgba(81, 81, 83, 0.5);
+  color: rgb(240, 77, 115);
 }
 .instructions {
   padding: 16px;
   border: 1px solid rgba(39, 33, 66, 0.5);
   width: 80%;
   font-size: 16px;
-  border: none;
-  border-radius: 50px;
+
+  border-radius: 40px;
   line-height: 20px;
-  color: grey;
 }
+
 .submit-button {
   margin-left: 10px;
-  background-color: rgba(81, 81, 83, 0.5);
-  color: rgb(239, 235, 235);
-  border: none;
+  background-color: rgba(245, 246, 248);
+  color: rgb(240, 77, 115);
+  border: 1px solid rgba(39, 33, 66, 0.5);
   border-radius: 50px;
   padding: 14px 24px;
   width: 150px;
@@ -65,24 +73,21 @@ a {
 }
 
 .recipe {
-  font-size: 18px;
+  font-size: 16px;
   font-style: oblique;
   padding: 20px;
-  background-color: rgb(239, 235, 235);
-  line-height: 30px;
-  border-left: 3px solid rgb(239, 235, 235);
-  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-  border-radius: 10px;
+  margin-left: 10px;
+  line-height: 20px;
 }
 
 .recipe strong {
-  color: blue;
-  line-height: 60px;
+  color: rgb(240, 77, 115);
+  line-height: 30px;
 }
 footer {
   text-align: center;
-  font-size: 13px;
-  margin-top: 30px;
+  font-size: 10px;
+  margin-top: 50px;
 }
 
 .generating {
